[project]
name = "beeai-fw-tavily-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "beeai-framework==0.1.36",
    "langchain-huggingface==0.3.1",
    "langchain-redis==0.2.3",
    "langchain-text-splitters==0.3.9",
    "mcp~=1.12.3",
    "pip~=25.2",
    "pydantic~=2.11.7",
    "sentence-transformers==5.0.0",
    # ARM64 (Apple Silicon) Macs
    "torch>=2.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Intel Macs
    "torch<=2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    # Other platforms (Linux/Windows etc.)
    "torch>=2.3; platform_system != 'Darwin'",
    "numpy<2"
]
